--- a/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
+++ b/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
@@ -77,9 +77,9 @@
     "\\\\\n",
     "&= +\\frac{\\partial h_{i0}}{\\partial x^k} \\frac{d x^k}{dt} - \\frac{\\partial h_{k0}}{\\partial x^i} \\frac{d x^k}{dt} + \\frac{1}{2}\\frac{\\partial h_{00}}{\\partial x^i} \n",
     "\\\\\n",
-    "&= -\\frac{1}{2}\\frac{\\partial h_{00}}{\\partial x^i} + \\sum_{k=1}^3\\left[\\frac{\\partial h_{i0}}{\\partial x^k} \\frac{d x^k}{dt} - \\frac{\\partial h_{k0}}{\\partial x^i} \\frac{d x^k}{dt}\\right]\n",
+    "&= \\frac{1}{2}\\frac{\\partial h_{00}}{\\partial x^i} + \\sum_{k=1}^3\\left[\\frac{\\partial h_{i0}}{\\partial x^k} \\frac{d x^k}{dt} - \\frac{\\partial h_{k0}}{\\partial x^i} \\frac{d x^k}{dt}\\right]\n",
     "\\\\\n",
-    "&= -\\frac{1}{2}\\frac{\\partial h_{00}}{\\partial x^i} + \\varepsilon_{ijk}\\varepsilon_{jlm}\\frac{\\partial h_{0m}}{\\partial x^l}\\frac{d x^k}{dt}\n",
+    "&= \\frac{1}{2}\\frac{\\partial h_{00}}{\\partial x^i} + \\varepsilon_{ijk}\\varepsilon_{jlm}\\frac{\\partial h_{0m}}{\\partial x^l}\\frac{d x^k}{dt}\n",
     "\\\\\n",
     "&= -\\left(\\vec{\\nabla}\\Phi\\right)_i - \\left((\\vec{\\nabla}\\times\\vec{A})\\times\\vec{v}\\right)_i\n",
     "\\\\\n",
@@ -92,12 +92,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hierbei ist $\\Phi = \\frac{1}{2}h_{00}$ und $(\\vec{A})_i = -h_{0i}$. Ersetzt man nun $\\vec{E} = -\\vec{\\nabla}\\Phi$ und $\\vec{B} = \\vec{\\nabla}\\times\\vec{A}$ und fordert $\\vec{\\nabla}\\cdot\\vec{A}=0$ (Coulomb-Eichung) erhält man folgende Gleichungen:\n",
+    "Hierbei ist $\\Phi = -\\frac{1}{2}h_{00}$ und $(\\vec{A})_i = -h_{0i}$. Ersetzt man nun $\\vec{E} = -\\vec{\\nabla}\\Phi$ und $\\vec{B} = \\vec{\\nabla}\\times\\vec{A}$ und fordert $\\vec{\\nabla}\\cdot\\vec{A}=0$ (Coulomb-Eichung) erhält man folgende Gleichungen:\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\frac{d \\vec{v}}{dt} &= \\vec{E} + \\vec{v}\\times\\vec{B}\n",
     "\\\\\n",
-    "\\vec{\\nabla}\\cdot\\vec{E} &= -\\frac{1}{2}\\Delta h_{00} = 4 \\pi \\rho\n",
+    "\\vec{\\nabla}\\cdot\\vec{E} &= \\frac{1}{2}\\Delta h_{00} = - 4 \\pi \\rho\n",
     "\\\\\n",
     "\\vec{\\nabla}\\cdot\\vec{B} &= 0\n",
     "\\\\\n",
@@ -264,7 +264,7 @@
    "source": [
     "Durch Einsetzen ergibt sich:\n",
     "$$\n",
-    "\\vec{E} = -\\vec{\\nabla} \\Phi = -\\frac{1}{2} \\vec{\\nabla} h_{00} = \\frac{M \\vec{r}}{r^3}\n",
+    "\\vec{E} = -\\vec{\\nabla} \\Phi = \\frac{1}{2} \\vec{\\nabla} h_{00} = -\\frac{M \\vec{r}}{r^3}\n",
     "$$\n",
     "$$\n",
     "\\vec{B} = \\vec{\\nabla}\\times\\vec{A} = - \\vec{\\nabla}\\times\\frac{\\vec{S}\\times\\vec{r}}{r^3} = \\frac{1}{r^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r}) \\vec{r}}{r^2}\\right]\n",
@@ -278,7 +278,7 @@
     "Hiermit lässt sich nun die Kraft auf ein Testteilchen der Masse $m$ schreiben als:\n",
     "$$\n",
     "m\\frac{d \\vec{v}}{dt} = m\\vec{E} + m\\vec{v}\\times\\vec{B}\n",
-    "= \\frac{m}{r^3} \\left[M \\vec{r} + \\vec{v}\\times\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r})}{r^2} \\vec{v}\\times\\vec{r}\\right]\n",
+    "= \\frac{m}{r^3} \\left[-M \\vec{r} + \\vec{v}\\times\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r})}{r^2} \\vec{v}\\times\\vec{r}\\right]\n",
     "$$"
    ]
   },
