--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -6,6 +6,14 @@
    "metadata": {},
    "source": [
     "### Konventionen\n",
+    "$$\n",
+    "\\bm{\\eta}=\\begin{bmatrix}\n",
+    "1 & 0 & 0 & 0 \\\\\n",
+    "0 & -1 & 0 & 0 \\\\\n",
+    "0 & 0 & -1 & 0 \\\\\n",
+    "0 & 0 & 0 & -1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "Metrik $(+---)$, natürliche Einheiten, in denen $c=G=1$"
    ]
   },
@@ -25,7 +33,10 @@
     "{g}_{\\mu \\nu} = \\partial_{\\mu} \\vec{ x }\\cdot\\partial_{\\nu} \\vec{ x }\n",
     "$$\n",
     "$$\n",
-    "\\bm{g} = \\left[\\begin{array}{c}1 \\quad 0 \\\\0 \\quad 1 \\\\\\end{array}\\right]\n",
+    "\\bm{g} = \\begin{bmatrix}\n",
+    "1 & 0 \\\\\n",
+    "0 & 1\n",
+    "\\end{bmatrix}\n",
     "$$\n",
     "$$\n",
     "\\frac{\\mathrm{d}^2 {x}^{\\lambda}}{\\mathrm{d} \\tau^2} = -\\Gamma^{\\lambda}_{\\mu \\nu}[\\bm{g}(\\vec{ x })] \\frac{\\mathrm{d} {x}^{\\mu}}{\\mathrm{d} \\tau} \\frac{\\mathrm{d} {x}^{\\nu}}{\\mathrm{d} \\tau}\n",
@@ -92,14 +103,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce31c919",
+   "id": "b10d3048",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Rotierende Kugelmasse\n",
+    "$$\n",
+    "\\rho(r) = \\rho_0 \\Theta(R-r)\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{j} = \\rho_0 \\vec{\\omega}\\times\\vec{r}\\Theta(R-r)\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
