kapitel: rotierende Kugelmasse & EM-Felder

--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -108,10 +108,22 @@
    "source": [
     "### Rotierende Kugelmasse\n",
     "$$\n",
-    "\\rho(r) = \\rho_0 \\Theta(R-r)\n",
+    "\\rho(|\\vec{x}|) = \\rho_0 \\Theta(R-|\\vec{x}|)\n",
     "$$\n",
     "$$\n",
-    "\\vec{j} = \\rho_0 \\vec{\\omega}\\times\\vec{r}\\Theta(R-r)\n",
+    "\\vec{j} = \\rho_0 \\vec{\\omega}\\times\\vec{x}\\Theta(R-|\\vec{x}|)\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{E} = -\\frac{M \\vec{x}}{|\\vec{x}|^3}\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{B} = \\frac{1}{|\\vec{x}|^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{x}) \\vec{x}}{|\\vec{x}|^2}\\right]\n",
+    "$$\n",
+    "$$\n",
+    "I = \\frac{2}{5} M R^2\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{S} = I \\vec{\\omega}\n",
     "$$"
    ]
   }
