missing factor 2 added & trajectory chapter

--- a/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
+++ b/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
@@ -103,7 +103,7 @@
     "\\\\\n",
     "\\vec{\\nabla}\\times\\vec{E} &= 0\n",
     "\\\\\n",
-    "\\vec{\\nabla}\\times\\vec{B} &= -\\Delta \\vec{A} = -8 \\pi \\vec{j}\n",
+    "\\vec{\\nabla}\\times\\vec{B} &= -\\Delta \\vec{A} = -16 \\pi \\vec{j}\n",
     "\\end{aligned}\n",
     "$$"
    ]
@@ -170,7 +170,7 @@
    "source": [
     "Für $h_{0i}$ bzw. für $\\vec{A}$ gilt:\n",
     "$$\n",
-    "\\Delta h_{0i} = -8 \\pi j_i = -8 \\pi \\rho_0 \\varepsilon_{ijk} \\omega_j x_k \\Theta(R-r)\n",
+    "\\Delta h_{0i} = -16 \\pi j_i = -16 \\pi \\rho_0 \\varepsilon_{ijk} \\omega_j x_k \\Theta(R-r)\n",
     "$$"
    ]
   },
@@ -188,7 +188,7 @@
     "$$\n",
     "Aus dem Vergleich mit der vorherigen Gleichung ergibt sich:\n",
     "$$\n",
-    "\\vec{\\nabla}(\\Delta a) = 8 \\pi \\rho_0 \\vec{r} \\Theta(R-r)\n",
+    "\\vec{\\nabla}(\\Delta a) = 16 \\pi \\rho_0 \\vec{r} \\Theta(R-r)\n",
     "$$"
    ]
   },
@@ -198,8 +198,8 @@
    "source": [
     "Diese Gleichung wird nun unter der Forderung $\\Delta a = 0$ für $r \\rightarrow \\infty$ aufintegriert:\n",
     "$$\n",
-    "\\int_{\\infty}^{r}\\vec{\\nabla}(\\Delta a) \\cdot \\vec{dr} = \\Delta a = 8 \\pi \\rho_0 \\int_{\\infty}^{r}r' \\Theta(R-r')dr'\n",
-    "= 4 \\pi \\rho_0 (r^2 -R^2) \\Theta(R-r)\n",
+    "\\int_{\\infty}^{r}\\vec{\\nabla}(\\Delta a) \\cdot \\vec{dr} = \\Delta a = 16 \\pi \\rho_0 \\int_{\\infty}^{r}r' \\Theta(R-r')dr'\n",
+    "= 8 \\pi \\rho_0 (r^2 -R^2) \\Theta(R-r)\n",
     "$$"
    ]
   },
@@ -209,10 +209,10 @@
    "source": [
     "Es wird nun erneut der folgende Ansatz gewählt:\n",
     "$$\n",
-    "a = \\frac{I}{r}\n",
+    "a = \\frac{2I}{r}\n",
     "$$\n",
     "$$\n",
-    "\\vec{\\nabla}a = - I \\frac{\\vec{r}}{r^3}\n",
+    "\\vec{\\nabla}a = - 2I \\frac{\\vec{r}}{r^3}\n",
     "$$\n",
     "Wobei $I$ hier wieder über die Randbedingung zu bestimmen ist."
    ]
@@ -223,10 +223,10 @@
    "source": [
     "Hierzu wird erneut folgende Betrachtung angestellt:\n",
     "$$\n",
-    "\\int_{S_R} \\vec{\\nabla}a \\cdot \\vec{dA} = \\int_{B_R} \\Delta a\\, dV = 4 \\pi \\int_{B_R} \\rho_0 (r^2 - R^2) dV\n",
+    "\\int_{S_R} \\vec{\\nabla}a \\cdot \\vec{dA} = \\int_{B_R} \\Delta a\\, dV = 8 \\pi \\int_{B_R} \\rho_0 (r^2 - R^2) dV\n",
     "$$\n",
     "$$\n",
-    "\\int_{S_R} \\vec{\\nabla} a \\cdot \\vec{dA} = -I \\int_{S_R} \\frac{1}{r^2} dA = -4 \\pi I\n",
+    "\\int_{S_R} \\vec{\\nabla} a \\cdot \\vec{dA} = -2 I \\int_{S_R} \\frac{1}{r^2} dA = -8 \\pi I\n",
     "$$\n",
     "Woraus folgt, dass $I$ das Trägheitsmoment der Kugel ist:\n",
     "$$\n",
@@ -240,7 +240,7 @@
    "source": [
     "Damit ergibt sich nun $h_{0i}$ durch Einsetzen:\n",
     "$$\n",
-    "h_{0i} = I \\frac{\\varepsilon_{ijk}\\omega_j x_k}{r^3} = \\frac{I(\\vec{\\omega}\\times\\vec{r})_i}{r^3} = \\frac{(\\vec{S}\\times\\vec{r})_i}{r^3}\n",
+    "h_{0i} = 2 I \\frac{\\varepsilon_{ijk}\\omega_j x_k}{r^3} = 2 \\frac{I(\\vec{\\omega}\\times\\vec{r})_i}{r^3} = 2 \\frac{(\\vec{S}\\times\\vec{r})_i}{r^3}\n",
     "$$"
    ]
   },
@@ -267,7 +267,7 @@
     "\\vec{E} = -\\vec{\\nabla} \\Phi = \\frac{1}{2} \\vec{\\nabla} h_{00} = -\\frac{M \\vec{r}}{r^3}\n",
     "$$\n",
     "$$\n",
-    "\\vec{B} = \\vec{\\nabla}\\times\\vec{A} = - \\vec{\\nabla}\\times\\frac{\\vec{S}\\times\\vec{r}}{r^3} = \\frac{1}{r^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r}) \\vec{r}}{r^2}\\right]\n",
+    "\\vec{B} = \\vec{\\nabla}\\times\\vec{A} = - 2 \\vec{\\nabla}\\times\\frac{\\vec{S}\\times\\vec{r}}{r^3} = \\frac{2}{r^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r}) \\vec{r}}{r^2}\\right]\n",
     "$$"
    ]
   },
@@ -278,7 +278,7 @@
     "Hiermit lässt sich nun die Kraft auf ein Testteilchen der Masse $m$ schreiben als:\n",
     "$$\n",
     "m\\frac{d \\vec{v}}{dt} = m\\vec{E} + m\\vec{v}\\times\\vec{B}\n",
-    "= \\frac{m}{r^3} \\left[-M \\vec{r} + \\vec{v}\\times\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{r})}{r^2} \\vec{v}\\times\\vec{r}\\right]\n",
+    "= \\frac{m}{r^3} \\left[-M \\vec{r} + 2 \\vec{v}\\times\\vec{S} - \\frac{6 (\\vec{S}\\cdot\\vec{r})}{r^2} \\vec{v}\\times\\vec{r}\\right]\n",
     "$$"
    ]
   },
@@ -289,11 +289,11 @@
     "### Kraft auf radial senkrecht zu $\\vec{S}$ einfallendes Teilchen\n",
     "Befindet sich ein Teilchen in der Ebene senkrecht zu $\\vec{S}$ und bewegt sich in radiale Richtung mit Geschwindigkeit $v$, wirkt folgende Kraft:\n",
     "$$\n",
-    "m\\frac{d \\vec{v}}{dt} = \\frac{m}{r^3} \\left[-M r \\hat{r} + \\frac{2}{5} M v \\omega \\hat{\\varphi}\\right]\n",
+    "m\\frac{d \\vec{v}}{dt} = \\frac{m}{r^3} \\left[-M r \\hat{r} + \\frac{4}{5} M v \\omega \\hat{\\varphi}\\right]\n",
     "$$\n",
     "Daher erfährt das Teilchen zusätzlich zur newtonschen Gravitationskraft eine ein senkrecht wirkende Kraft. Das Verhältnis der Kraftbeträge ist:\n",
     "$$\n",
-    "\\frac{\\frac{2}{5} M v \\omega}{M r} = \\frac{2}{5} \\frac{v \\omega}{r}\n",
+    "\\frac{\\frac{2}{5} M v \\omega}{M r} = \\frac{4}{5} \\frac{v \\omega}{r}\n",
     "$$\n",
     "Diese Kraft kann als frame-dragging verstanden werden und wirkt in Drehrichtung."
    ]
@@ -305,22 +305,12 @@
     "### Kraft auf ein senkrecht über den Pol fliegendes Teilchen\n",
     "Angenommen ein Teilchen befindet sich auf der $z$-Achse und hat eine Geschwindigkeit $v$ in positive $x$-Richtung, dann wirkt folgende Kraft:\n",
     "$$\n",
-    "m\\frac{d \\vec{v}}{dt} = \\frac{m}{r^3} \\left[-M r \\hat{z} + \\frac{4}{5} M \\omega v \\hat{y}\\right]\n",
+    "m\\frac{d \\vec{v}}{dt} = \\frac{m}{r^3} \\left[-M r \\hat{z} + \\frac{8}{5} M \\omega v \\hat{y}\\right]\n",
     "$$\n",
     "Daher erfährt das Teilchen zusätzlich zur newtonschen Gravitationskraft eine ein senkrecht wirkende Kraft. Das Verhältnis der Kraftbeträge ist:\n",
     "$$\n",
-    "\\frac{\\frac{4}{5} M v \\omega}{M r} = \\frac{4}{5} \\frac{v \\omega}{r}\n",
+    "\\frac{\\frac{4}{5} M v \\omega}{M r} = \\frac{8}{5} \\frac{v \\omega}{r}\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vorzeichenfehler\n",
-    "\n",
-    "Der erste Term ist im klassischen Grenzfall deutlich größer als die beiden anderen Terme und stellt das Newtonsche Gravitationsgesetz dar, allerdings ist wohl irgendwo ein Vorzeichen abhanden gekommen... (und eigentlich sollte das Voreichen nicht von der Definition von $\\vec{E}$ oder $\\vec{B}$ abhängen, da die Kraft unabhängig von dieser Definition die gleiche sein muss, daher vermute ich, dass irgendwo beim einsetzen der Christoffel-Symbole etwas schiefgelaufen ist)\n",
-    "Vermutung: Der Fehler liegt bei $-\\Delta h_{00} = 8 \\pi \\rho$. Hier sollte das Vorzeichen anders sein?! (würde in einer sinnvollen Kraft resultieren)"
    ]
   },
   {
@@ -338,30 +328,30 @@
     "\n",
     "Hierbei ist $\\vec{f_{LT}}$ die folgende Kraftdichte:\n",
     "$$\n",
-    "\\vec{f_{LT}} = \\Rho(\\rho, z) \\left[\\vec{v}\\times\\vec{\\Omega} - \\frac{3 (\\vec{S}\\cdot\\vec{r}_S)}{r_S^5}\\vec{v}\\times\\vec{r}\\right]\n",
+    "\\vec{f_{LT}} = \\Rho(\\rho, z) \\left[2 \\vec{v}\\times\\vec{\\Omega} - \\frac{6 (\\vec{S}\\cdot\\vec{r}_S)}{r_S^5}\\vec{v}\\times\\vec{r}\\right]\n",
     "$$\n",
     "Dies ergibt sich durch Einsetzen von $\\vec{r}_G=\\vec{r}_S+\\vec{r}$ in die oben hergeleitete Kraft des Lense-Thirring-Effekts. Hierbei werden die Annahmen $r\\approx r_S$ und $\\vec{S}\\cdot\\vec{r}\\approx\\vec{S}\\cdot\\vec{r}_S$ gemacht. Der newtonsche Anteil wirkt nur auf den Schwerpunkt und geht deswegen nicht mit ein.\n",
     "\n",
     "Die Größe $\\vec{\\Omega}$ dient der Übersichtlichkeit. Sie hängt nur von $\\vec{S}$ und $\\vec{r}_S$ ab und ist gegeben durch:\n",
     "$$\n",
-    "\\vec{\\Omega} = B(\\vec{r}_S) = \\frac{1}{r_S^3}\\left(\\vec{S} - \\frac{3(\\vec{S}\\cdot\\vec{r}_S)}{r_S^2}\\vec{r}_S\\right)\n",
+    "\\vec{\\Omega} = \\frac{B(\\vec{r}_S)}{2} = \\frac{1}{r_S^3}\\left(\\vec{S} - \\frac{3(\\vec{S}\\cdot\\vec{r}_S)}{r_S^2}\\vec{r}_S\\right)\n",
     "$$\n",
     "\n",
     "Einsetzen in die Gleichung für das Drehmoment führt zu:\n",
     "$$\n",
-    "\\frac{d \\vec{L}}{d t} = \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\vec{r}\\times(\\vec{v}\\times\\vec{\\Omega}) - \\frac{3 (\\vec{S}\\cdot\\vec{r}_S)}{r_S^5} \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\vec{r}\\times(\\vec{v}\\times\\vec{r})\n",
+    "\\frac{d \\vec{L}}{d t} = \\int\\int\\int d^3r\\ 2 \\Rho(\\rho, z) \\vec{r}\\times(\\vec{v}\\times\\vec{\\Omega}) - \\frac{6 (\\vec{S}\\cdot\\vec{r}_S)}{r_S^5} \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\vec{r}\\times(\\vec{v}\\times\\vec{r})\n",
     "$$\n",
     "Mit $\\vec{a}\\times(\\vec{b}\\times\\vec{a}) = a^2 \\vec{b} - (\\vec{a}\\cdot\\vec{b})\\vec{a}$ und $\\vec{v}=\\omega\\rho\\hat{\\varphi}$ folgt dann:\n",
     "$$\n",
-    "\\frac{d \\vec{L}}{d t} = \\omega \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\rho (\\vec{r}\\cdot\\vec{\\Omega})\\hat{\\varphi} - \\frac{3 (\\vec{S}\\cdot\\vec{r}_S)\\omega}{r_S^5} \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\rho r^2 \\hat{\\varphi}\n",
+    "\\frac{d \\vec{L}}{d t} = \\omega \\int\\int\\int d^3r\\ 2 \\Rho(\\rho, z) \\rho (\\vec{r}\\cdot\\vec{\\Omega})\\hat{\\varphi} - \\frac{6 (\\vec{S}\\cdot\\vec{r}_S)\\omega}{r_S^5} \\int\\int\\int d^3r\\ \\Rho(\\rho, z) \\rho r^2 \\hat{\\varphi}\n",
     "$$\n",
     "Der zweite Term verschwindet bei der Integration über $\\varphi$. Damit ergibt sich:\n",
     "$$\n",
-    "\\frac{d \\vec{L}}{d t} = \\pi \\omega \\left(\\hat{z}\\times\\vec{\\Omega}\\right) \\int\\int \\rho^3 \\Rho(\\rho,z) dz dr\n",
+    "\\frac{d \\vec{L}}{d t} = 2 \\pi \\omega \\left(\\hat{z}\\times\\vec{\\Omega}\\right) \\int\\int \\rho^3 \\Rho(\\rho,z) dz dr\n",
     "$$\n",
     "Man erkennt hier das Trägheitsmoment $I = 2\\pi\\int\\int \\rho^3 \\Rho(\\rho,z) dz dr$ wieder. Es folgt final:\n",
     "$$\n",
-    "\\frac{d \\vec{L}}{d t} = \\frac{1}{2} \\vec{L}\\times\\vec{\\Omega}\n",
+    "\\frac{d \\vec{L}}{d t} = \\vec{L}\\times\\vec{\\Omega}\n",
     "$$\n",
     "Wobei hier $\\vec{L} = I \\vec{\\omega}$ verwendet wurde."
    ]
@@ -370,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dies stimmt bis auf einen Faktor $\\frac{1}{2}$ mit dem Ergebnis aus Gravitation von Misner & Thorne überein."
+    "Dies stimmt mit dem Ergebnis aus Gravitation von Misner & Thorne überein."
    ]
   },
   {
