--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -14,7 +14,7 @@
     "0 & 0 & 0 & -1\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "Metrik $(+---)$, natürliche Einheiten, in denen $c=G=1$"
+    "Metrik $(+,-,-,-)$, natürliche Einheiten, in denen $c=G=1$"
    ]
   },
   {
@@ -89,7 +89,7 @@
     "$$\n",
     "{ R }_{\\mu \\nu} - \\frac{1}{2} {g}_{\\mu \\nu} {R} = 8 \\pi {T}_{\\mu \\nu}\n",
     "$$\n",
-    "$-\\Delta h_{00} = 8\\pi\\rho$, $-\\Delta h_{0i} = 8\\pi j_i$\n",
+    "$-\\Delta h_{00} = 8\\pi\\rho$, $-\\Delta h_{0i} = 16\\pi j_i$\n",
     "$$\n",
     "\\vec{\\nabla}\\cdot\\vec{E} = - 4 \\pi \\rho\n",
     "\\\\\n",
@@ -97,7 +97,7 @@
     "\\\\\n",
     "\\vec{\\nabla}\\times\\vec{E} = 0\n",
     "\\\\\n",
-    "\\vec{\\nabla}\\times\\vec{B} = -8 \\pi \\vec{j}\n",
+    "\\vec{\\nabla}\\times\\vec{B} = -16 \\pi \\vec{j}\n",
     "$$"
    ]
   },
@@ -117,7 +117,7 @@
     "\\vec{E} = -\\frac{M \\vec{x}}{|\\vec{x}|^3}\n",
     "$$\n",
     "$$\n",
-    "\\vec{B} = \\frac{1}{|\\vec{x}|^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{x}) \\vec{x}}{|\\vec{x}|^2}\\right]\n",
+    "\\vec{B} = \\frac{2}{|\\vec{x}|^3} \\left[\\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{x}) \\vec{x}}{|\\vec{x}|^2}\\right]\n",
     "$$\n",
     "$$\n",
     "I = \\frac{2}{5} M R^2\n",
@@ -126,6 +126,29 @@
     "\\vec{S} = I \\vec{\\omega}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12f1991d",
+   "metadata": {},
+   "source": [
+    "### Trajektorien\n",
+    "$$\n",
+    "\\vec{ F }_E = -\\frac{M}{|\\vec{ x }|^3} \\vec{ x }\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{ F }_B = \\frac{2}{|\\vec{ x }|^3} \\left[\\vec{ v } \\times \\vec{S} - \\frac{3 (\\vec{S}\\cdot\\vec{ x })}{|\\vec{ x }|^2} \\vec{ v } \\times \\vec{ x } \\right]\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{ F } = {m} \\left( \\vec{ E } + \\vec{ v }\\times\\vec{ B } \\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d169b424",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
