--- a/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
+++ b/python/Lense-Thirring-Effekt Gravitoelectromagnetism.ipynb
@@ -330,7 +330,7 @@
     "$$\n",
     "\\vec{f_{LT}} = \\Rho(\\rho, z) \\left[2 \\vec{v}\\times\\vec{\\Omega} - \\frac{6 (\\vec{S}\\cdot\\vec{r}_S)}{r_S^5}\\vec{v}\\times\\vec{r}\\right]\n",
     "$$\n",
-    "Dies ergibt sich durch Einsetzen von $\\vec{r}_G=\\vec{r}_S+\\vec{r}$ in die oben hergeleitete Kraft des Lense-Thirring-Effekts. Hierbei werden die Annahmen $r\\approx r_S$ und $\\vec{S}\\cdot\\vec{r}\\approx\\vec{S}\\cdot\\vec{r}_S$ gemacht. Der newtonsche Anteil wirkt nur auf den Schwerpunkt und geht deswegen nicht mit ein.\n",
+    "Dies ergibt sich durch Einsetzen von $\\vec{r}_G=\\vec{r}_S+\\vec{r}$ in die oben hergeleitete Kraft des Lense-Thirring-Effekts. Hierbei werden die Annahmen $r_G\\approx r_S$ und $\\vec{S}\\cdot\\vec{r}_G\\approx\\vec{S}\\cdot\\vec{r}_S$ gemacht. Der newtonsche Anteil wirkt nur auf den Schwerpunkt und geht deswegen nicht mit ein.\n",
     "\n",
     "Die Größe $\\vec{\\Omega}$ dient der Übersichtlichkeit. Sie hängt nur von $\\vec{S}$ und $\\vec{r}_S$ ab und ist gegeben durch:\n",
     "$$\n",
