--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -148,6 +148,23 @@
    "cell_type": "markdown",
    "id": "d169b424",
    "metadata": {},
+   "source": [
+    "### Präzession\n",
+    "$$\n",
+    "\\frac{\\mathrm{d} \\vec{L}}{\\mathrm{d} t} = \\int \\vec{r}\\times\\vec{f}_{LT}\\ \\mathrm{d}^3r\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{\\Omega} = \\frac{\\vec{B}(\\vec{r}_S)}{2}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{d \\vec{L}}{d t} = \\vec{L}\\times\\vec{\\Omega}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d67087",
+   "metadata": {},
    "source": []
   }
  ],
