precession vec anim

--- a/python/test_geodesic.ipynb
+++ b/python/test_geodesic.ipynb
@@ -64,8 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "3bda9385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.2  0.3 -0.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.spatial.transform import Rotation\n",
+    "def rotate_vector(vector, angle, axis):\n",
+    "    rot = Rotation.from_rotvec(angle * np.array(axis) / np.linalg.norm(axis))\n",
+    "    return np.dot(vector, rot.as_matrix().T)\n",
+    "\n",
+    "\n",
+    "target = np.array([-0.2,0.3,-0.2])\n",
+    "length = np.linalg.norm(target)\n",
+    "vec = (0,0,length)\n",
+    "vec = rotate_vector(vec, np.arccos(target[2]/length), axis=(1,0,0))\n",
+    "vec = rotate_vector(vec, np.arctan2(target[1], target[0])+np.pi/2, axis=(0,0,1))\n",
+    "print(vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1517cf2",
    "metadata": {},
    "outputs": [],
    "source": []
