--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -150,14 +150,34 @@
    "metadata": {},
    "source": [
     "### Präzession\n",
+    "Drehimpuls der Probe\n",
     "$$\n",
-    "\\frac{\\mathrm{d} \\vec{L}}{\\mathrm{d} t} = \\int \\vec{r}\\times\\vec{f}_{LT}\\ \\mathrm{d}^3r\n",
+    "\\vec{ L }\n",
+    "$$\n",
+    "Gravitomagnetisches Feld\n",
+    "$$\n",
+    "\\vec{ B } = \\frac{2\\vec{ S }}{{r}^3}\n",
+    "$$\n",
+    "Lorentz-Kraft\n",
+    "$$\n",
+    "\\vec{ F } = m \\vec{ v }\\times\\vec{ B }\n",
+    "$$\n",
+    "Drehmoment\n",
+    "$$\n",
+    "\\frac{\\mathrm{d} \\vec{ L }}{\\mathrm{d} t} = \\vec{ M } = \\vec{ r }\\times\\vec{ F }\n",
+    "$$\n",
+    "Allgemeiner:\n",
+    "$$\n",
+    "\\frac{\\mathrm{d} \\vec{ L }}{\\mathrm{d} t} = \\int \\mathrm{d}^3r\\ \\vec{ r }\\times\\vec{f}_{LT}\n",
     "$$\n",
     "$$\n",
-    "\\vec{\\Omega} = \\frac{\\vec{B}(\\vec{r}_S)}{2}\n",
+    "\\vec{f}_{LT} = \\Rho(\\rho, z) \\vec{ v }\\times\\vec{ B }(\\vec{ r }+\\vec{r}_S) = \\frac{\\Rho(\\rho, z)}{r_S^3} \\left[2 \\vec{ v }\\times\\vec{ S } - \\frac{6 (\\vec{ S }\\cdot\\vec{r}_S)}{r_S^2}\\vec{ v }\\times (\\vec{ r }+\\vec{r}_S)\\right]\n",
     "$$\n",
     "$$\n",
-    "\\frac{d \\vec{L}}{d t} = \\vec{L}\\times\\vec{\\Omega}\n",
+    "\\frac{\\mathrm{d} \\vec{ L }}{\\mathrm{d} t} = \\vec{ L }\\times\\vec{ \\Omega }\n",
+    "$$\n",
+    "$$\n",
+    "\\vec{ \\Omega } = \\frac{\\vec{ B }(\\vec{ r }_S)}{2}\n",
     "$$"
    ]
   },
