binärsystem & akkretionsscheibe fertig, Quellen

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -64,7 +64,7 @@
 		\item J. Lense, H. Thirring, \textit{Phys. Z.} \textbf{19}, 156 (1918)
 		\item C. Misner, K. Thorne, \& J. Wheeler. - Gravitation (1973)
 		\item V. Venkatraman Krishnan \textit{et al.} Lense–Thirring frame dragging induced by a fast-rotating white dwarf in a binary pulsar system. \textit{Science} \textbf{367}, 577-580 (2020)
-		\item Pasham, D.R., Zajaček, M., Nixon, C.J. \textit{et al.} Lense–Thirring precession after a supermassive black hole disrupts a star. \textit{Nature} \textbf{630}, 325–328 (2024)
+		\item D.R. Pasham, M. Zajaček, C.J. Nixon \textit{et al.} Lense–Thirring precession after a supermassive black hole disrupts a star. \textit{Nature} \textbf{630}, 325–328 (2024)
 	\end{enumerate}
 	
 	\thispagestyle{empty}
