--- a/python/formulas.ipynb
+++ b/python/formulas.ipynb
@@ -167,6 +167,8 @@
     "\\frac{\\mathrm{d} \\vec{ L }}{\\mathrm{d} t} = \\vec{ M } = \\vec{ r }\\times\\vec{ F }\n",
     "$$\n",
     "Allgemeiner:\n",
+    "\n",
+    "Näherungen: $r_G\\approx r_S$ und $\\vec{ S }\\cdot\\vec{r}_G\\approx\\vec{ S }\\cdot\\vec{r}_S$\n",
     "$$\n",
     "\\frac{\\mathrm{d} \\vec{ L }}{\\mathrm{d} t} = \\int \\mathrm{d}^3r\\ \\vec{ r }\\times\\vec{f}_{LT}\n",
     "$$\n",
